--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,11 +3,12 @@ agp = "8.1.0-beta05"
 androidDesugarJdkLibs = "2.0.3"
 kotlin = "1.8.20"
 kotlinxCoroutines = "1.6.4"
+kotlinxDatetime = "0.4.0"
 junit4 = "4.13.2"
 androidxComposeBom = "2023.06.00"
 androidxComposeCompiler = "1.4.5"
 androidxCore = "1.10.1"
-androidxCoreSplashscreen = "1.0.0"
+androidxCoreSplashscreen = "1.0.1"
 androidxEspresso = "3.5.1"
 androidxLifecycle = "2.6.1"
 androidxTestCore = "1.5.0"
@@ -64,6 +65,8 @@ androidx-test-uiautomator = { group = "androidx.test.uiautomator", name = "uiaut
 
 kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib-jdk8", version.ref = "kotlin" }
 kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinxCoroutines" }
+kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinxCoroutines" }
+kotlinx-datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime", version.ref = "kotlinxDatetime" }
 
 #To delete
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
