--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,8 @@
 [versions]
-agp = "8.1.0-beta05"
 androidDesugarJdkLibs = "2.0.3"
-kotlin = "1.8.20"
-kotlinxCoroutines = "1.6.4"
-kotlinxDatetime = "0.4.0"
-kotlinxSerializationJson = "1.5.1"
-ksp = "1.8.20-1.0.11"
-
-junit4 = "4.13.2"
+androidGradlePlugin = "8.1.0-beta05"
+androidxActivity = "1.7.2"
+androidxAppCompat = "1.6.1"
 androidxComposeBom = "2023.06.00"
 androidxComposeCompiler = "1.4.5"
 androidxCore = "1.10.1"
@@ -22,12 +17,15 @@ androidxTestRules = "1.5.0"
 androidxTestRunner = "1.5.2"
 androidxUiAutomator = "2.2.0"
 coil = "2.4.0"
-espresso-core = "3.5.1"
 lifecycle-runtime-ktx = "2.6.1"
 hilt = "2.44.2"
 hiltExt = "1.0.0"
-activity-compose = "1.7.2"
-
+junit4 = "4.13.2"
+kotlin = "1.8.20"
+kotlinxCoroutines = "1.7.1"
+kotlinxDatetime = "0.4.0"
+kotlinxSerializationJson = "1.5.1"
+ksp = "1.8.20-1.0.11"
 okhttp = "4.10.0"
 retrofit = "2.9.0"
 retrofitKotlinxSerializationJson = "1.0.0"
@@ -38,15 +36,14 @@ secrets = "2.0.1"
 compose-bom = "2023.06.00"
 androidx-test-ext-junit = "1.1.5"
 org-jetbrains-kotlin-android = "1.8.0"
-appcompat = "1.6.1"
-material = "1.8.0"
+material = "1.9.0"
 
 [libraries]
 junit4 = { group = "junit", name = "junit", version.ref = "junit4" }
 android-desugarJdkLibs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "androidDesugarJdkLibs" }
-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
+espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "androidxEspresso" }
+lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "androidxLifecycle" }
+activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "androidxActivity" }
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "androidxComposeBom" }
 androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation" }
@@ -102,11 +99,11 @@ room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 #To delete
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidxAppCompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 [plugins]
-com-android-application = { id = "com.android.application", version.ref = "agp" }
+com-android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
