--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 androidDesugarJdkLibs = "2.0.3"
-androidGradlePlugin = "8.1.0-beta05"
+androidGradlePlugin = "8.1.0-rc01"
 androidxActivity = "1.7.2"
 androidxAppCompat = "1.6.1"
 androidxComposeBom = "2023.06.00"
@@ -28,7 +28,7 @@ ksp = "1.8.20-1.0.11"
 okhttp = "4.10.0"
 retrofit = "2.9.0"
 retrofitKotlinxSerializationJson = "1.0.0"
-room = "2.5.1"
+room = "2.5.2"
 secrets = "2.0.1"
 
 #To delete
