--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ androidxUiAutomator = "2.2.0"
 coil = "2.4.0"
 hilt = "2.44.2"
 hiltExt = "1.0.0"
+jacoco= "0.8.10"
 junit4 = "4.13.2"
 kotlin = "1.8.20"
 kotlinxCoroutines = "1.7.1"
